--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mr Garage Automobiles</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="py-4 bg-dark text-white ">
     <nav class="container mx-auto flex justify-between">
       <div class="logo ">
-        <a href="index.html">PX</a>
+        <a href="index.html">MG</a>
       </div>
         <ul class="space-x-6 hidden md:flex">
             <li><a href="#">Home</a></li>
